# pertdata

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  requirements_devcontainer.txt  requirements_minimal.txt  tutorial.ipynb
.devcontainer/: devcontainer.json  post_create.sh  post_start.sh
.github/workflows/: publish.yml
data/: AdamsonWeissman2016.yaml  DixitRegev2016.yaml  NormanWeissman2019.yaml  ReplogleWeissman2022_K562.yaml
notebooks/: test.ipynb  tutorial.ipynb
notebooks/preprocess/: .gitignore  AdamsonWeissman2016.ipynb  AdamsonWeissman2016_Guille.ipynb  DixitRegev2016.ipynb  DixitRegev2016_Guille.ipynb  NormanWeissman2019.ipynb  NormanWeissman2019_Guille.ipynb  ReplogleNorman2020_E7.ipynb
preprocess/: DixitRegev2016.ipynb  ReplogleNorman2020_E7.ipynb
src/pertdata/: __init__.py  adamson.py  extract_gears_obs.py  norman.py  pert_dataset.py  preprocess.py  preprocess_raw_data.py  replogle2020.ipynb  replogle_2020.py  replogle_2020_exp7.py  replogle_k562_essential.py  replogle_rpe1_essential.py  shared.py  utils.py  version.py
src/pertdata/resources/: DixitRegev2016.json  NormanWeissman2019_Guille.json  NormanWeissman2019_filtered.json  ReplogleNorman2020_E7.json  ReplogleNorman2020_E7.yaml  ReplogleWeissman2022_K562_essential.json  ReplogleWeissman2022_RPE1.yaml  ReplogleWeissman2022_rpe1_essential.json  WesselsMendez-Mancilla2023.yaml  adamson.json  dixit.json  norman.json  replogle_k562_essential.json  replogle_rpe1_essential.json  wessel_dataset.json
src/pertdata/to_be_integrated/: dixit.py  gears.py  norman.py  scperturb.py  shared.py
