[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pertdata"
version = "0.1.0"
authors = [
  {name = "Jan Voges"},
  {name = "Guillermo Dufort y Álvarez"},
]
description = "Functionality for Handling Perturbation Datasets"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/voges/pertdata.git"

[project.scripts]
pertdata-preprocess = "pertdata.preprocess:main"
